--- a/concepts/core-architecture/assertion-model.mdx
+++ b/concepts/core-architecture/assertion-model.mdx
@@ -1,197 +1,201 @@
 ---
-title: "Assertion Model and Failure Handling"
-description: "Explains the design of GoogleTest's rich assertion system, including standard, fatal (ASSERT_), and non-fatal (EXPECT_) assertion macros. Discusses assertion result types, failure messages, and how the framework gives detailed diagnostic feedback to developers. Covers extensibility via user-defined assertions and predicates."
+title: "Assertion Model"
+description: "Delve into the rich assertion system of GoogleTest. This page breaks down how assertions work, the differences between fatal and non-fatal failures, and the mechanisms for custom assertion results. Understand the implications for test reliability, debugging, and diagnostics."
 ---
 
-# Assertion Model and Failure Handling
+# Assertion Model
 
-GoogleTest offers a comprehensive assertion system designed to verify conditions in test code with precision and clarity. This system includes paired macros for assertions: fatal (`ASSERT_`) assertions which abort the current function upon failure and non-fatal (`EXPECT_`) assertions which report the failure but allow the test to continue. Through detailed assertion result types, expressive failure messages, and extensibility mechanisms, GoogleTest provides developers with rich diagnostic feedback, aiding efficient debugging and robust test development.
+## Introduction
+
+GoogleTest's assertion system is the foundational mechanism that enables you to validate conditions in your C++ tests. Assertions check your code’s behavior and signal successes or failures, directly influencing test results. This page provides an in-depth look at how assertions operate, the distinction between fatal and non-fatal failures, and how to create custom assertion results to craft clearer, more informative test diagnostics.
+
+Understanding the assertion model is pivotal to writing reliable, maintainable tests that provide immediate feedback and clear debugging insights.
 
 ---
 
-## 1. Assertion Macros Overview
+## Types of Assertions: Fatal vs Non-Fatal
 
-GoogleTest's assertions are highly diverse and thoughtfully designed to suit many scenarios. The primary two categories of assertion macros are:
+When you verify a condition in a test using GoogleTest, assertions can lead to three outcomes:
 
-- **Fatal Assertions (`ASSERT_`)**: These immediately abort the current test function when a failure occurs, halting further execution within the function. They are available only within `void` returning functions due to the inability to use exceptions.
+- **Success**: The condition holds; execution continues normally.
+- **Non-Fatal Failure**: The condition fails, but the current test function continues executing, logging the failure.
+- **Fatal Failure**: The condition fails critically, causing the current function to abort immediately.
 
-- **Non-Fatal Assertions (`EXPECT_`)**: These log failures but allow the current test function to continue executing, enabling multiple assertions in one test case.
+### Fatal Assertions (`ASSERT_*`)
+Fatal assertions (such as `ASSERT_EQ`, `ASSERT_TRUE`, etc.) generate fatal failures. When they fail, execution immediately exits the current function — commonly the test function — preventing subsequent test code from running.
 
-### Usage Example
+This behavior is essential when further execution after a failure would lead to invalid operations, for example dereferencing a null pointer:
+
 ```cpp
-EXPECT_TRUE(my_condition) << "My condition is not true";
-ASSERT_EQ(a, b) << "Values differ";
+ASSERT_NE(ptr, nullptr) << "Pointer must not be null";
+*ptr = 42;  // Safe only if pointer is non-null
 ```
 
-Each macro supports streaming a custom failure message via the `<<` operator for contextual debugging.
+Here, if `ptr` is `nullptr`, the test aborts here and does not attempt to dereference.
+
+**Important**: Fatal assertions can only be used in functions returning `void`. Using them in non-void functions triggers confusing compile errors.
+
+### Non-Fatal Assertions (`EXPECT_*`)
+Non-fatal assertions (such as `EXPECT_EQ`, `EXPECT_TRUE`, etc.) report failures but allow the current test function to continue running. This is invaluable for gathering multiple failure points within a single test execution, improving debugging efficiency.
+
+For example:
+
+```cpp
+EXPECT_EQ(x, y) << "Comparing x and y";
+EXPECT_EQ(a, b) << "Comparing a and b";
+```
+
+If both comparisons fail, both failures will be reported within one test run.
+
+### Choosing Between `ASSERT_*` and `EXPECT_*`
+The rule of thumb:
+
+- Use `ASSERT_*` when subsequent steps rely on the assertion passing, or it would be unsafe to proceed otherwise.
+- Use `EXPECT_*` when you want to detect multiple issues in a single test run.
 
 ---
 
-## 2. Assertion Result Types and Messages
+## Writing and Using Assertions
 
-### Explicit Success and Failure
+Assertions in GoogleTest are macros that look like function calls but generate test part results if they fail. They can be simple Boolean checks, comparisons, string validations, exception checks, or complex predicates. Assertions print failure details including the source file, line number, and optionally your custom message.
 
-GoogleTest supports explicit signaling of success or failure that is not tied to a Boolean expression. This is essential when control flow, rather than a direct boolean expression, governs test outcome.
-
-- `SUCCEED()`: Generates a documented success, although it doesn’t by itself mark the entire test as successful.
-- `FAIL()`: Generates a fatal failure that aborts the current function, only usable in `void` functions.
-- `ADD_FAILURE()`: Creates a non-fatal failure allowing continued execution.
-
-These can be embedded in functions with complex logic or switch statements to indicate unexpected code paths or checkpoints.
+### Basic Assertion Example
 
 ```cpp
-switch(expression) {
-  case 1: /* ... */
-  case 2: /* ... */
-  default:
-    FAIL() << "Unexpected case hit.";
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1) << "Factorial of zero should be 1";
 }
 ```
 
-### Rich Failure Messages
+Here, if `Factorial(0)` is not 1, a non-fatal failure is logged with the custom message.
 
-When an assertion fails, GoogleTest automatically prints:
+### Adding Custom Failure Messages
 
-- The expression evaluated.
-- The actual and expected values.
-- Custom user-provided messages.
+You can augment assertions with additional context using streaming syntax:
 
-This output is enriched by the extensible value printer that formats standard and user-defined types intelligibly.
-
----
-
-## 3. Assertion Macro Categories
-
-GoogleTest provides macros spanning common assertion needs:
-
-### Boolean Conditions
-
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` verifies that a condition is true.
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` verifies false.
-
-### Value Comparison
-
-GoogleTest offers comprehensive macros for binary comparisons that ensure the arguments are each evaluated once, preserving side effects safely.
-
-- Equality/Inequality: `EXPECT_EQ`, `ASSERT_EQ`, `EXPECT_NE`, `ASSERT_NE`
-- Order Comparisons: `EXPECT_LT`, `ASSERT_LT`, `EXPECT_LE`, `ASSERT_LE`, `EXPECT_GT`, `ASSERT_GT`, `EXPECT_GE`, `ASSERT_GE`
-
-Special cases exist for string and floating-point comparisons to resolve semantic subtleties.
-
-### String Comparisons
-
-Macros such as `EXPECT_STREQ` compare C strings by content rather than pointer equality, with case-insensitive variants (`EXPECT_STRCASEEQ`).
-
-### Floating-Point Comparisons
-
-Because floating-point arithmetic is imprecise, GoogleTest provides:
-
-- `EXPECT_FLOAT_EQ` / `ASSERT_FLOAT_EQ`
-- `EXPECT_DOUBLE_EQ` / `ASSERT_DOUBLE_EQ`
-- `EXPECT_NEAR` / `ASSERT_NEAR` (for absolute error tolerance)
-
-### Exception Assertions
-
-For builds with exceptions enabled, assertions verify if code throws expected exceptions:
-
-- `EXPECT_THROW` / `ASSERT_THROW`
-- `EXPECT_ANY_THROW` / `ASSERT_ANY_THROW`
-- `EXPECT_NO_THROW` / `ASSERT_NO_THROW`
-
-### Predicate Assertions
-
-Enhance failure messages for complex boolean predicates using:
-
-- `EXPECT_PRED*` and `ASSERT_PRED*`: Wrap unary or up to 5-ary predicate functions.
-- `EXPECT_PRED_FORMAT*` and `ASSERT_PRED_FORMAT*`: Allow custom formatting of failure messages using predicate-formatters returning `AssertionResult`.
-
-This allows better insights into failure states by printing argument values and detailed messages.
-
----
-
-## 4. Failure Handling and Diagnostic Feedback
-
-When assertions fail, GoogleTest not only reports failure but also provides detailed diagnostic context:
-
-- **Source Location**: File and line number where the assertion was triggered.
-- **Expression Readout**: The expression under test is printed with actual and expected values.
-- **User Messages**: Custom messages streamed into the assertion enrich the output.
-- **Stack Traces (Verbose Mode)**: Run tests with flag `--gmock_verbose=info` to include stack traces for mock calls, aiding call-site identification.
-
-Example failure output:
-
-```
-path/to/foo_test.cc:11: Failure
-Value of: Bar(n)
-Expected: 1
-  Actual: 2
+```cpp
+EXPECT_EQ(vec.size(), expected_size) << "Vector size mismatch";
 ```
 
-### Propagation of Fatal Failures
+This message is appended to the assertion’s failure output, helping trace failures to their causes.
 
-Fatal assertions like `ASSERT_*` or `FAIL()` abort only the current function, not the entire test. GoogleTest provides mechanisms to manage this:
+### Assertions on Complex Conditions
 
-- `ASSERT_NO_FATAL_FAILURE(statement)`: Verifies that statement causes no fatal failure.
-- `HasFatalFailure()`: Queries if a fatal failure occurred.
+If a condition is complex and not covered by built-in assertions, you can use predicate assertions to get detailed feedback.
 
-These tools enable subroutine assertion containment and early exits on failure detection.
+#### Predicate Assertions
 
-### Assertion Placement Constraints
+These are macros `EXPECT_PRED*` and `ASSERT_PRED*` that take a predicate function and arguments, reporting detailed information on failure:
 
-Because GoogleTest does not rely on exceptions, fatal assertions (`ASSERT_*` and `FAIL()`) only work in `void` returning functions to avoid compilation errors.
+```cpp
+bool IsMutuallyPrime(int a, int b);
 
-To test assertions in non-void functions, users should prefer `EXPECT_*` or redesign code accordingly.
+EXPECT_PRED2(IsMutuallyPrime, 8, 15);
+```
+
+If the predicate returns `false`, the assertion outputs argument values for easier debugging.
+
+#### Predicate-Formatter Assertions
+
+For even richer messages, predicate-formatters return a `testing::AssertionResult` with success or failure plus a custom failure message:
+
+```cpp
+testing::AssertionResult AssertMutuallyPrime(const char* a_expr, const char* b_expr, int a, int b) {
+  if (IsMutuallyPrime(a, b)) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << a_expr << " and " << b_expr
+                                       << " are not mutually prime";
+}
+
+EXPECT_PRED_FORMAT2(AssertMutuallyPrime, x, y);
+```
+
+When the assertion fails, the message shows the expressions and values involved, making failures clear.
 
 ---
 
-## 5. Extending Assertions with User-Defined Predicates and Custom Assertions
+## The AssertionResult Class
 
-GoogleTest supports extensibility for assertions through:
+At the core of predicate-format assertions lies the `testing::AssertionResult` class, representing the result (success or failure) of an assertion with an optional message.
 
-- **Custom predicate functions returning `testing::AssertionResult`**: Enable rich failure messages with success/failure and descriptive text.
+- Use `AssertionSuccess()` to return a successful result.
+- Use `AssertionFailure()` to return a failure, optionally streaming a failure message.
 
-- **Predicate-formatter assertions (`EXPECT_PRED_FORMAT*`)**: Allow users to implement fine-grained, multi-argument predicates that produce customized diagnostic output. The predicate-formatter receives expressions and values, and returns an `AssertionResult`.
-
-Example implementation:
+Example:
 
 ```cpp
 testing::AssertionResult IsEven(int n) {
-  if ((n % 2) == 0) return testing::AssertionSuccess();
+  if (n % 2 == 0) return testing::AssertionSuccess();
   return testing::AssertionFailure() << n << " is odd";
 }
-
-EXPECT_PRED_FORMAT1(IsEven, value);
 ```
 
-- **Matchers Integration with Assertions**: Use `EXPECT_THAT()` with matchers for expressive, readable assertions that generate fluent failure messages.
+This class helps write expressive assertions that provide meaningful failure diagnostics beyond simple `EXPECT_TRUE`.
 
 ---
 
-## 6. Summary and Best Practices
+## Key Classes Associated with Assertions
 
-- Use `EXPECT_*` macros when you want tests to continue after failures.
-- Use `ASSERT_*` macros when test correctness depends on a prior check to avoid cascading errors.
-- To avoid subtle bugs in assertion messages, always supply readable failure messages.
-- Use predicate and predicate-formatter macros for complex conditions to get informative diagnostics and avoid opaque failures.
-- Customize printing of user-defined types with `AbslStringify()` or `PrintTo()` for clearer assertion output.
-- Place fatal assertions in `void` returning functions only.
-- Utilize verbose flags to gain insight on mock behavior when troubleshooting.
+Beyond macros, GoogleTest provides classes that represent assertion outcomes and test results:
 
-For more examples and a complete catalog of assertions, refer to the [Assertions Reference](reference/assertions.md).
+- **TestPartResult**: Represents the outcome of a single assertion or test action, including type (success, fatal/non-fatal failure, skip), source location, and message.
+- **TestResult**: Aggregates all assertion results for a test, tracks failures/skips, and records test properties.
+
+These classes are usually handled internally but can be accessed for custom reporting and listeners.
 
 ---
 
-## Appendix: Failure Flow in GoogleMock (Relevant to Assertion Model)
+## Best Practices and Common Pitfalls
 
-Though focusing on assertions proper, a brief overview of GoogleMock's interaction with the assertion model helps understand failure feedback from mock expectations.
+- **Use `EXPECT_*` to accumulate multiple errors in one test**, allowing you to identify all related flaws at once.
+- **Use `ASSERT_*` when continuing does not make sense**, such as verifying a pointer is non-null before dereferencing.
+- **Avoid fatal assertions in constructors and destructors**, as they cannot abort the whole test safely. Use `SetUp()` and `TearDown()` instead.
+- **Evaluate assertions only once**: GoogleTest guarantees that arguments to assertions are evaluated a single time, preventing side effects from running multiple times.
+- **Be clear and descriptive in custom messages** to help future debugging.
 
-- Mocks define *expectations* using the `EXPECT_CALL` macro.
-- When a mock method is called, GoogleMock:
-  - Searches for an active expectation matching the call arguments,
-  - Checks sequences, orderings (`InSequence`, `After`), and call counts,
-  - Reports *uninteresting* (no expectation) or *unexpected* (no matching expectation) calls via assertions,
-  - Generates detailed failure messages, including which expectations were tried and what arguments caused mismatches.
+---
 
-This rich feedback assists developers in fine-tuning both tests and implementation.
+## Troubleshooting Assertion Failures
+
+- If a fatal assertion (`ASSERT_*`) aborts earlier than you expect, verify that you’re not in a non-`void` function.
+- If no useful failure information appears, consider using predicate-formatters for richer diagnostics.
+- For flakiness in tests due to partial state changes after aborting asserts, consider redesigning tests for clearer failure isolation.
+
+---
+
+## Summary
+
+Understanding GoogleTest’s assertion model empowers you to write expressive, reliable tests that fail clearly and continue when appropriate. You control test flow precisely using non-fatal and fatal assertions, employ rich predicate assertions for complex checks, and streamline diagnostics with custom messages and assertion results. Mastery of this model directly improves test quality and debugging efficiency.
+
+
+---
+
+## Additional Resources
+
+- [GoogleTest Primer: Assertions](https://github.com/google/googletest/blob/main/docs/primer.md#assertions)
+- [Assertions Reference](https://github.com/google/googletest/blob/main/docs/reference/assertions.md)
+- [Advanced Guide: More Assertions and Predicate Assertions](https://github.com/google/googletest/blob/main/docs/advanced.md#more-assertions)
+- [Test Results and Reporting (TestPartResult and TestResult)](https://github.com/google/googletest/blob/main/docs/api-reference/core-apis/test-results.md)
+- [Matchers and Flexible Assertions Concepts](https://github.com/google/googletest/blob/main/docs/concepts/mocking-and-extensibility/matchers-and-assertions.md)
+
+---
+
+## Example Code Snippet
+
+```cpp
+// Using ASSERT and EXPECT in practical test
+TEST(MyClassTest, HandlesNullPointer) {
+  MyClass obj;
+  int* ptr = obj.GetPointer();
+
+  // Abort function if ptr is null
+  ASSERT_NE(ptr, nullptr) << "Pointer should not be null";
+
+  // Verify state, but keep going if check fails
+  EXPECT_EQ(*ptr, 42) << "Pointer does not point to expected value";
+  EXPECT_TRUE(obj.IsReady()) << "Object should be ready after init";
+}
+```
+
+This test demonstrates the difference: the test aborts if `ptr` is nullptr, but performs all other checks.
 
 ---
