--- a/concepts/advanced-concepts/integration-patterns.mdx
+++ b/concepts/advanced-concepts/integration-patterns.mdx
@@ -1,233 +1,158 @@
 ---
-title: "Integration Patterns"
-description: "Explore supported patterns and best practices for integrating GoogleTest and GoogleMock into diverse build systems and CI environments. Learn about cross-platform compatibility, dependency management, and coexisting with other frameworks."
+title: "Integration Patterns and Scalability"
+description: "Review recommended patterns for integrating GoogleTest into diverse build and CI systems, maximizing performance for large test suites, and scaling testing across teams or codebases. This page covers common pitfalls and strategies for robust, maintainable test infrastructure."
 ---
 
-# Integration Patterns
+# Integration Patterns and Scalability
 
-## Overview
-
-Effective integration of GoogleTest and GoogleMock into your build and continuous integration (CI) workflows ensures reliable, maintainable, and scalable testing environments. This guide explores proven patterns for incorporating GoogleTest/GoogleMock into diverse build systems such as CMake and Bazel, managing dependencies, enabling automatic test discovery, and configuring CI reporting.
-
-By following these patterns, you gain seamless workflow integration, cross-platform compatibility, and efficient management of tests and mocks in your development pipeline.
+This guide reviews recommended approaches for integrating GoogleTest into various build and continuous integration (CI) systems. It emphasizes maximizing performance when running large test suites and effectively scaling testing efforts across teams and codebases. Key topics include common pitfalls, best practices, and strategies to build robust and maintainable test infrastructure.
 
 ---
 
-## Build System Integration
+## 1. Integrating GoogleTest with Build Systems
 
-### CMake Integration
+### Supporting Diverse Build Environments
 
-For C++ projects using CMake, integration with GoogleTest and GoogleMock requires configuring your `CMakeLists.txt` appropriately to locate and link the testing libraries.
+GoogleTest integrates smoothly with widespread build systems including CMake and Bazel. Each offers distinct mechanisms to embed testing into the build lifecycle:
 
-**Key steps:**
+- **CMake**: GoogleTest provides CMake configuration files (`gtest.pc.in` and `gmock.pc.in`) that enable discovery and linkage of libraries through `pkg-config`. To optimize build times, it is recommended to separate mock class constructor and destructor definitions from the class declarations, implementing them in `.cc` files so compilation overhead is minimized especially for large projects.
 
-1. **Find or add GoogleTest/**GoogleMock:** 
+- **Bazel**: Has native support facilitating test rule declarations and dependency management for GoogleTest and GoogleMock. Bazel's sandboxed builds and caching boost performance but require correct BUILD rule specifications.
 
-   Use either the pre-installed packages or add GoogleTest as a subdirectory:
+### Key Integration Tips
 
-   ```cmake
-   # If installed system-wide
-   find_package(GTest REQUIRED)
+- Declare mock class constructors and destructors out-of-line to speed up compilation:
 
-   # Or add googletest source as subdirectory
-   add_subdirectory(external/googletest)
-   ```
+  ```cpp
+  // Header:
+  class MockFoo : public Foo {
+   public:
+    MockFoo();
+    ~MockFoo() override;
+    MOCK_METHOD(int, DoThis, (), (override));
+    //...
+  };
 
-2. **Link your test targets against GoogleTest and GoogleMock:**
+  // Source:
+  MockFoo::MockFoo() {}
+  MockFoo::~MockFoo() {}
+  ```
 
-   ```cmake
-   add_executable(my_test test_main.cc ...)
-   target_link_libraries(my_test GTest::gtest GTest::gmock GTest::gtest_main GTest::gmock_main)
-   ```
+- Use `pkg-config` to obtain proper compiler and linker flags when integrating via command line or external systems.
+- Configure your build scripts to link with either `gmock` or `gmock_main` depending on whether you provide your own `main()`.
 
-3. **Enable test discovery:**
 
-   Add GoogleTest macros for automatic test discovery and registration:
+## 2. Maximizing Test Performance for Large Suites
 
-   ```cmake
-   include(GoogleTest)
-   gtest_discover_tests(my_test)
-   ```
+### Strategies for Speed and Reliability
 
-4. **Compile flags and dependencies:**
+Testing large codebases with extensive test coverage requires attention to efficiency and maintainability:
 
-   Ensure C++17 or newer is enabled (as GoogleTest depends on modern C++ features), and thread dependencies are linked.
+- **Selective Test Runs**: Leverage GoogleTest’s filtering options (`--gtest_filter`) to focus CI runs on relevant test subsets.
+- **Parallel Execution and Sharding**: GoogleTest supports environment variables (e.g., `GTEST_TOTAL_SHARDS`, `GTEST_SHARD_INDEX`) to shard tests across multiple machines or processes, reducing wall clock time.
+- **Test Fixture Optimization**: Use lightweight fixtures and prefer constructor over `SetUp()` methods for expensive setup to reduce redundant overhead.
+- **NiceMocks for Uninteresting Calls**: Using `NiceMock<T>` suppresses warnings for calls that are not explicitly expected, reducing test noise and execution slowdowns.
 
-##### Practical tips:
+### Avoiding Common Performance Pitfalls
 
-- Use `FetchContent` or `add_subdirectory()` for reproducible builds.
-- Separate GoogleMock and GoogleTest targets as needed.
-- Use imported targets `GTest::gmock` and `GTest::gtest` for clarity.
+- Excessive logging within tests can slow execution and obfuscate important messages.
+- Defining overly strict expectations or sequences in mocks can introduce brittleness and increase test maintenance.
+- Using `EXPECT_CALL` sparingly, favor `ON_CALL` for defining default mock behaviors, to reduce constraint overhead.
 
 
-### Bazel Integration
+## 3. Scaling Testing Infrastructure Across Teams
 
-For Bazel users, GoogleTest and GoogleMock come packaged and ready to use via `@com_google_googletest`:
+### Managing Large, Distributed Test Environments
 
-**Key steps:**
+- **Domain-Specific Interface Abstraction**: Encourage teams to design code with interfaces instead of concrete classes. This enables mocking and test isolation without tight coupling.
 
-1. **Add googletest as a dependency:**
+- **Centralized Mock Definitions**: For commonly mocked interfaces, place mock class definitions in shared libraries or packages to avoid duplication and ensure consistency.
 
-   In your `WORKSPACE` file:
+- **Test Execution Ordering and Sequencing**: With GoogleMock’s `Sequence` and `InSequence` utilities, teams can specify partial or total orders in test expectations to reliably verify interaction sequences in concurrent or complex workflows.
 
-   ```bazel
-   http_archive(
-       name = "com_google_googletest",
-       url = "https://github.com/google/googletest/archive/release-1.12.1.tar.gz",
-       strip_prefix = "googletest-release-1.12.1",
-       sha256 = "<sha256sum>",
-   )
-   ```
+- **Instrumenting Test Events**: Extend GoogleTest with custom `TestEventListener`s to monitor test execution phases, collect metrics, or trigger additional workflows.
 
-2. **Declare test dependencies:**
+### Best Practices for Test Maintainability
 
-   In your `BUILD` files:
+- Avoid brittle mocks: Use `NiceMock` by default, and `StrictMock` only when needed to ensure errors are caught early.
+- Regularly refactor and review tests to keep expectations aligned with implementation contracts.
+- Write parameterized and typed tests to reduce duplication and ensure broad coverage with less code.
+- Use custom matchers and actions to encapsulate complex validation or behavior, improving test readability.
 
-   ```bazel
-   cc_test(
-       name = "my_test",
-       srcs = ["my_test.cc"],
-       deps = ["@com_google_googletest//googletest", "@com_google_googletest//googlemock"],
-   )
-   ```
 
-3. **Test execution:**
+## 4. Common Pitfalls and Troubleshooting
 
-   Bazel automatically discovers and runs `cc_test` targets.
+### Expectations and Mock Behavior
 
-##### Practical tips:
+- Always set `EXPECT_CALL` expectations before exercising the mock; late expectations lead to undefined behavior.
+- Use `RetiresOnSaturation()` when chaining multiple expectations to avoid "sticky" expectations that block others.
+- When mocking non-virtual methods, structure your code with templates or interfaces to simulate polymorphism.
 
-- Use `testonly = True` for mock libraries to avoid polluting production targets.
-- Use Bazel query and test filtering for large code base management.
+### Death Tests and Thread Safety
 
----
+- Death tests run in subprocesses to isolate crashes and should be designed carefully to avoid shared state pollution.
+- Configure death test style (`fast` vs `threadsafe`) according to environment and performance trade-offs.
 
-## Dependency Management
+### Compilation and Linking
 
-GoogleMock depends on GoogleTest and requires linking with threading and some platform-specific libraries.
+- Ensure that all GoogleTest and GoogleMock libraries link versions match to avoid runtime failures.
+- Use the provided CMake targets or pkg-config files to correctly incorporate test dependencies.
 
-- Use package managers or submodules/subtrees to manage GoogleTest and GoogleMock versioning consistently.
-- Always keep GoogleMock and GoogleTest versions in sync to avoid compatibility issues.
-- In CMake, prefer the imported targets `GTest::gmock` and `GTest::gtest` for automatic dependency management.
-- For Bazel, use the official `com_google_googletest` external repository.
 
----
+## 5. Summary Workflow Example
 
-## Automatic Test Discovery
+A typical GoogleTest integration and scaling flow in a CI system looks like this:
 
-GoogleTest offers automatic test registration using macros like `TEST()`, `TEST_F()`, and `TEST_P()`. Combine this with build system support to simplify running tests.
-
-- In CMake, `gtest_discover_tests()` gathers all tests from your executable and registers them to the CTest framework.
-- In Bazel, all `cc_test` targets are discoverable and runnable via Bazel test commands.
-
-Automated discovery allows CI systems to dynamically find and report test results without manual updates.
-
----
-
-## Continuous Integration Best Practices
-
-### XML Test Output
-
-Configure your test binaries to produce XML reports compatible with most CI servers:
-
-- Use `--gtest_output=xml[:path]` to generate detailed test reports.
-
-Example run command:
-
-```bash
-test_binary --gtest_output=xml:test_results.xml
-```
-
-### Parallel Test Execution
-
-Leverage test sharding and parallelism:
-
-- GoogleTest supports `--gtest_filter` and `--gtest_repeat` to slice tests.
-- Bazel and CTest have built-in parallel test runners.
-
-### Test Result Aggregation
-
-Integrate XML reports into CI dashboards:
-
-- Jenkins, GitHub Actions, GitLab CI, and others natively understand GoogleTest XML outputs.
-
-### Environment Isolation
-
-- Use isolated build and test environments.
-- Containerize or sandbox your tests to ensure reproducibility.
-
----
-
-## Troubleshooting Integration
-
-### Common Issues
-
-- **Linker errors:** Missing pthreads or incorrect linking order.
-- **Test discovery failures:** Tests not linked or missing registration macros.
-- **Version mismatches:** GoogleMock and GoogleTest library versions must be compatible.
-
-### Debugging Tips
-
-- Increase gMock verbosity with `--gmock_verbose=info` to see detailed call information.
-- Use CTest and Bazel verbose flags to get detailed build/test logs.
-- Validate your mock and test namespaces and include paths.
-
----
-
-## Summary
-
-Integrating GoogleTest and GoogleMock into your build systems and CI pipelines is straightforward when following established patterns. Utilizing CMake or Bazel correctly manages dependencies and enables automatic test discovery, while CI configurations leveraging XML outputs and parallel executions optimize test feedback loops.
-
-Adhering to these practices makes your tests reliable, maintainable, and scalable across diverse environments.
-
----
-
-## Additional Resources
-
-- [GoogleTest Installation and Integration](https://github.com/google/googletest/blob/main/docs/getting-started/setup-prerequisites-installation/installation-integration.md)
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
-- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
-- [GoogleMock Cheat Sheet](https://github.com/google/googletest/blob/main/docs/gmock_cheat_sheet.md)
-- [GoogleMock FAQ](https://github.com/google/googletest/blob/main/docs/gmock_faq.md)
-- [GoogleTest Integration Points Overview](https://github.com/google/googletest/blob/main/docs/overview/inside-googletest/integration-points.md)
-
----
-
-## Mermaid Diagram: Integration Workflow
 ```mermaid
 flowchart TD
-  BuildSystem[CMake/Bazel Build System] -->|Defines Targets & Dependencies| MockFramework[GoogleTest & GoogleMock]
-  MockFramework -->|Provides Libraries & Macros| TestCode[User's Test Code]
-  TestCode -->|Uses Macros for Mocks & Tests| CompileStep[Compilation & Linking]
-  CompileStep -->|Generates| TestBinaries[Executable Test Binaries]
-  TestBinaries -->|Run Tests| TestRun[Execution]
-  TestRun -->|Output Results| CI[Continuous Integration System]
-  CI -->|Collects Results & Reports| Developers
-  Developers -->|Write & Refine Tests| TestCode
-
-  subgraph CI System
-    TestRun
-    TestResults[XML/JSON Reports]
-    TestResults --> CI
-  end
-
-  style MockFramework fill:#f9f,stroke:#333,stroke-width:2px
-  style TestBinaries fill:#bbf,stroke:#333,stroke-width:2px
-  style CI fill:#bfb,stroke:#333,stroke-width:2px
+  A[Developer writes tests] --> B[Define mocks with MOCK_METHOD]
+  B --> C[Write EXPECT_CALL and ON_CALL for behavior]
+  C --> D[Setup CI build to include GoogleTest & GoogleMock]
+  D --> E[Compile with constructor/destructor out-of-line for mocks]
+  E --> F[Configure test sharding & filtering in CI]
+  F --> G[Parallelize test execution]
+  G --> H[Collect and report results & coverage]
+  H --> I[Monitor flaky test reports and optimize fixtures]
 ```
 
----
 
-## Practical Tips and Best Practices
+## 6. Additional Resources
 
-- **Synchronize library versions:** Use the same GoogleTest and GoogleMock versions to avoid runtime conflicts.
-- **Minimize dependencies in tests:** Mock objects help isolate tests from complex dependencies, improving test speed.
-- **Use `ON_CALL` for defaults and `EXPECT_CALL` for verifications:** Avoid over-specifying mock behavior.
-- **Leverage build system tooling:** Use CMake's `gtest_discover_tests()` or Bazel's `cc_test` to automate test management.
-- **Control verbosity for debugging:** Use gMock `--gmock_verbose` levels strategically during development.
-- **Avoid mocking classes you don't own:** Define mocks within the owners’ scope or via adapters.
-- **Use `NiceMock` and `StrictMock` selectivity:** Control test noise and failure sensitivity.
+- [GoogleTest System Architecture Overview](https://google.github.io/googletest/overview/foundations-and-architecture/architecture-overview)
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for deep dives into mock patterns
+- [Best Practices for Mock Usage](https://google.github.io/googletest/guides/core-scenarios/working-with-mocks)
+- [Performance Optimization Guide](https://google.github.io/googletest/guides/advanced-best-practices/performance-optimization)
+- [GoogleTest FAQ](https://google.github.io/googletest/faq.html) for common issues
 
 ---
 
-This completes the guide on integrating GoogleTest and GoogleMock into your build and CI systems, ensuring robust and efficient testing in your C++ projects.
+<Tip>
+Maximize test suite scalability by leveraging GoogleTest's built-in filtering, sharding mechanisms, and by carefully structuring mocks and fixtures. Aim to keep tests robust yet flexible to reduce maintenance overhead.
+</Tip>
+
+<Warning>
+Never set mock expectations after the mock is exercised; doing so leads to undefined behavior and often silent test failures.
+</Warning>
+
+<Info>
+Consider using `NiceMock` to suppress warnings on uninteresting calls, improving test output clarity in large test suites.
+</Info>
+
+<Note>
+Extract out complex mock setup routines into shared test fixtures or utility functions to promote reuse across teams.
+</Note>
+
+---
+
+### Appendix: Understanding gMock Integration into Build and CI
+
+- GoogleMock libraries come in two main flavors:
+  - `gmock`: basic mocking support
+  - `gmock_main`: includes a main() function to run tests
+
+- Use `MOCK_METHOD` macro in mock classes to define mocked methods with proper qualifiers like `override`, `const`, `noexcept`.
+- Optimize compilation by moving mock constructors/destructors out-of-line.
+- Use `EXPECT_CALL` to set expectations on mocks before use, with cardinalities and actions.
+- Use test environment variables to shard test runs and parallelize effectively.
+
+---
